new URL() is deprecated, use new URI().toURL() instead